--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="error_server_busy">Server Busy!</string>
     <string name="error_general">Something went wrong!</string>
     <string name="error_network">Check your internet connection</string>
+    <string name="no_result">No Result!</string>
+    <string name="error_occurred">Error Occurred</string>
+    <string name="try_again">Try again</string>
 </resources>
