--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,10 @@
     <string name="no_result">No Result!</string>
     <string name="error_occurred">Error Occurred</string>
     <string name="try_again">Try again</string>
+    <string name="url_not_found">URL is not found!</string>
+    <string name="access_denied">Access denied</string>
+    <string name="overview">Overview</string>
+    <string name="genres">Genres</string>
+    <string name="producers">Producers</string>
+    <string name="show_more">Show more…</string>
 </resources>
